--- a/flowersay/src/main/webapp/WEB-INF/web.xml
+++ b/flowersay/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,7 @@
 		<param-value>
   		classpath:spring-mvc.xml,
   		classpath:spring-mybatis.xml,
+  		classpath:spring-mq.xml,
   		classpath:spring-redis.xml
   	</param-value>
 	</context-param>
