--- a/flowersay/src/main/resources/message.properties
+++ b/flowersay/src/main/resources/message.properties
@@ -14,3 +14,7 @@ TemplateCode3=SMS_103715005
 TemplateCode4=SMS_103675008
 ##交易完成了##
 TemplateCode5=SMS_103980006
+##注册验证##
+TemplateCode6=SMS_105000112
+##找回密码##
+TemplateCode7=SMS_105140113
