--- a/flowersay/src/main/webapp/WEB-INF/web.xml
+++ b/flowersay/src/main/webapp/WEB-INF/web.xml
@@ -58,4 +58,15 @@
         <filter-name>springSessionRepositoryFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <!-- 跨域 -->
+    <filter>
+    	<filter-name>cors</filter-name>
+    	<filter-class>com.duiya.filder.SimpleCORSFilter</filter-class>
+    </filter>
+    <filter-mapping>
+    	<filter-name>cors</filter-name>
+    	<url-pattern>*</url-pattern>
+    </filter-mapping>
+  
 </web-app>
