--- a/flowersay/src/main/resources/message.properties
+++ b/flowersay/src/main/resources/message.properties
@@ -18,3 +18,5 @@ TemplateCode5=SMS_103980006
 TemplateCode6=SMS_105000112
 ##找回密码##
 TemplateCode7=SMS_105140113
+##退单通知
+TemplateCode8=SMS_111890303
