--- a/flowersay/src/main/resources/database.properties
+++ b/flowersay/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/db_flower?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-username=root
-password=root
+url=jdbc:mysql://123.207.243.135:3306/db_flower?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+username=duiya
+password=duiya
 initialSize=0
 maxActive=20
 maxIdle=20
