--- a/flowersay/src/main/resources/message.properties
+++ b/flowersay/src/main/resources/message.properties
@@ -1,9 +1,9 @@
 ##################################
 #		阿里大于短信服务的配置文件                            #
 ##################################
-accessKeyId=LTAIvq6OlHpBesVa
-accessKeySecret=CtuS6ZHUC7lmbsnnRU8dWyP9KBfYcV
-signName=对呀花语
+accessKeyId=
+accessKeySecret=
+signName=
 ##商家处理了##
 TemplateCode1=SMS_103630006
 ##商家发货了##
